; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tditest/tditest/extr_tditest.c_TdiQueryDeviceControl.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tditest/tditest/extr_tditest.c_TdiQueryDeviceControl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }
%struct.TYPE_6__ = type { i32 }

@FALSE = common dso_local global i32 0, align 4
@MIN_TRACE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"IoBuildDeviceIoControlRequest() failed.\0A\00", align 1
@STATUS_INSUFFICIENT_RESOURCES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TdiQueryDeviceControl(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_5__*, align 8
  %18 = alloca %struct.TYPE_6__, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  store i32 %0, i32* %9, align 4
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  %21 = load i32, i32* %9, align 4
  %22 = call i32 @IoGetRelatedDeviceObject(i32 %21)
  store i32 %22, i32* %16, align 4
  %23 = load i32, i32* %10, align 4
  %24 = load i32, i32* %16, align 4
  %25 = load i32, i32* %11, align 4
  %26 = load i32, i32* %12, align 4
  %27 = load i32, i32* %13, align 4
  %28 = load i32, i32* %14, align 4
  %29 = load i32, i32* @FALSE, align 4
  %30 = call i32 @IoBuildDeviceIoControlRequest(i32 %23, i32 %24, i32 %25, i32 %26, i32 %27, i32 %28, i32 %29, i32* null, i32* null)
  store i32 %30, i32* %20, align 4
  %31 = load i32, i32* %20, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %37, label %33

33:                                               ; preds = %7
  %34 = load i32, i32* @MIN_TRACE, align 4
  %35 = call i32 @TDI_DbgPrint(i32 %34, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %36 = load i32, i32* @STATUS_INSUFFICIENT_RESOURCES, align 4
  store i32 %36, i32* %8, align 4
  br label %58

37:                                               ; preds = %7
  %38 = load i32, i32* %20, align 4
  %39 = call %struct.TYPE_5__* @IoGetNextIrpStackLocation(i32 %38)
  store %struct.TYPE_5__* %39, %struct.TYPE_5__** %17, align 8
  %40 = load i32, i32* %16, align 4
  %41 = load %struct.TYPE_5__*, %struct.TYPE_5__** %17, align 8
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %41, i32 0, i32 1
  store i32 %40, i32* %42, align 4
  %43 = load i32, i32* %9, align 4
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %17, align 8
  %45 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %44, i32 0, i32 0
  store i32 %43, i32* %45, align 4
  %46 = load i32, i32* %20, align 4
  %47 = load i32, i32* %16, align 4
  %48 = load i32, i32* @FALSE, align 4
  %49 = call i32 @TdiCall(i32 %46, i32 %47, %struct.TYPE_6__* %18, i32 %48)
  store i32 %49, i32* %19, align 4
  %50 = load i32*, i32** %15, align 8
  %51 = icmp ne i32* %50, null
  br i1 %51, label %52, label %56

52:                                               ; preds = %37
  %53 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = load i32*, i32** %15, align 8
  store i32 %54, i32* %55, align 4
  br label %56

56:                                               ; preds = %52, %37
  %57 = load i32, i32* %19, align 4
  store i32 %57, i32* %8, align 4
  br label %58

58:                                               ; preds = %56, %33
  %59 = load i32, i32* %8, align 4
  ret i32 %59
}

declare dso_local i32 @IoGetRelatedDeviceObject(i32) #1

declare dso_local i32 @IoBuildDeviceIoControlRequest(i32, i32, i32, i32, i32, i32, i32, i32*, i32*) #1

declare dso_local i32 @TDI_DbgPrint(i32, i8*) #1

declare dso_local %struct.TYPE_5__* @IoGetNextIrpStackLocation(i32) #1

declare dso_local i32 @TdiCall(i32, i32, %struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
